# font_effect_tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_log.txt  buildspec.json  install.bat  vcpkg.json
data/effects/: arc.effect  bloom.effect  cartoon.effect  chroma.effect  circuit.effect  flame.effect  glitch.effect  glow.effect  godray.effect  neon.effect  outerglow.effect  outline.effect  puzzle.effect  rainbow.effect  scanline.effect  slice.effect  slime.effect  spark.effect  spotlight.effect  sprite.effect  storyteller.effect  textfill.effect  warp.effect  waterdrop.effect  watersurface.effect  wave.effect
data/locale/: en-US.ini  ja-JP.ini
package/: install-admin.ps1  install-to-obs.ps1  インストール方法.txt
src/: effect-arc.c  effect-arc.h  effect-base.h  effect-bloom.c  effect-bloom.h  effect-cartoon.c  effect-cartoon.h  effect-chroma.c  effect-chroma.h  effect-circuit.c  effect-circuit.h  effect-counter.c  effect-counter.h  effect-cube.c  effect-cube.h  effect-depth3d.c  effect-depth3d.h  effect-dust.c  effect-dust.h  effect-flame.c  effect-flame.h  effect-flip.c  effect-flip.h  effect-fontswitch.c  effect-fontswitch.h  effect-glitch.c  effect-glitch.h  effect-godray.c  effect-godray.h  effect-hop.c  effect-hop.h  effect-imagedeco.c  effect-imagedeco.h  effect-jitter.c  effect-jitter.h  effect-neon.c  effect-neon.h  effect-none.c  effect-none.h  effect-outliner.c  (+52 more)
